--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "stability-ts": "^1.2.0"
+    "stability-ts": "^1.2.0",
+    "twilio": "^3.81.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
