Add variables to the env example

--- a/.env-example
+++ b/.env-example
@@ -1,1 +1,89 @@
+### Node JS ###
+
+# description: Your Node JS Port
+# format: Number
+# example: 1337
+# required: true
 PORT=8080
+
+# description: Your Production Base URL.
+# format: URL
+# example: https://www.test.com
+# required: true
+PRODUCTION_BASE_URL=
+
+### Dreamstudio / Stable Diffusion ###
+
+# description: Your Dreamstudio API Key 
+# format: Alphanumeric
+# example: sk-XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+# link: https://beta.dreamstudio.ai/membership
+# required: true
+DREAMSTUDIO_API_KEY=
+
+# description: To generate multiple images from one prompt.
+# format: Positive Integer
+# example: 1
+# link: https://beta.dreamstudio.ai/dream
+# required: false
+STABLE_DIFFUSION_SAMPLES=4
+
+### Banner Bear ###
+
+# description: Your Banner Bear API Key
+# format: String
+# example: bb_pr_XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+# link: https://app.bannerbear.com/projects/
+# required: true
+BANNER_BEAR_API_KEY=    
+
+# description: Your Banner Bear Template Id
+# format: Alphanumeric
+# example: 4lpAnumer1c
+# link: https://app.bannerbear.com/projects/
+# required: true
+BANNER_BEAR_IMAGE_TEMPLATE_ID=
+
+# description: Your Banner Bear Template Image Width
+# format: Positive Integer 
+# example: 960
+# link: https://app.bannerbear.com/projects/
+# required: true
+BANNER_BEAR_IMAGE_TEMPLATE_IMAGE_WIDTH=960
+
+# description: Your Banner Bear Template Image Height
+# format: Positive Integer
+# example: 960
+# link: https://app.bannerbear.com/projects/
+# required: true
+BANNER_BEAR_IMAGE_TEMPLATE_IMAGE_HEIGHT=960
+
+### Twilio ####
+
+# description: Your Twilio Account SID
+# format: String
+# example: ACXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+# link: https://www.twilio.com/docs/iam/keys/api-key
+# required: true
+TWILIO_ACCOUNT_SID=
+
+# description: Your Twilio Auth Token
+# format: Alphanumeric
+# example: P4SSW0RDXXXXXXXXXXXXXXXXXXXXXXXX
+# link: http://twilio.com/console
+# required: true
+TWILIO_AUTH_TOKEN=
+
+# description: Your Twilio API Key
+# format: String
+# example: SKXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+# link: https://www.twilio.com/docs/iam/keys/api-key
+# required: true
+TWILIO_API_KEY=
+
+# description: Your Twilio API Secret
+# format: String
+# example: P4SSW0RDXXXXXXXXXXXXXXXXXXXXXXXX
+# link: https://www.twilio.com/docs/iam/keys/api-key
+# required: true
+TWILIO_API_KEY_SECRET=
