--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "stability-ts": "^1.2.0",
+    "stability-client": "^1.5.0",
     "twilio": "^3.81.0"
   },
   "devDependencies": {
